[gd_scene load_steps=13 format=2]

[ext_resource path="res://script/player.gd" type="Script" id=1]
[ext_resource path="res://assets/personagem/mago/walk1.png" type="Texture" id=2]
[ext_resource path="res://assets/personagem/mago/walk2.png" type="Texture" id=3]
[ext_resource path="res://assets/personagem/mago/cast1.png" type="Texture" id=4]
[ext_resource path="res://assets/personagem/mago/cast2.png" type="Texture" id=5]
[ext_resource path="res://assets/personagem/mago/cast3.png" type="Texture" id=6]
[ext_resource path="res://assets/personagem/mago/cast4.png" type="Texture" id=7]
[ext_resource path="res://assets/personagem/mago/walk3.png" type="Texture" id=8]
[ext_resource path="res://assets/personagem/mago/walk4.png" type="Texture" id=9]
[ext_resource path="res://tileset/light.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.5
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "cast",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.84232
height = 5.94503

[node name="player" type="KinematicBody2D" groups=[
"root",
]]
z_as_relative = false
collision_mask = 3
script = ExtResource( 1 )
velocidade = 1.0

[node name="mage" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "cast"
frame = 4
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.25, 0.25 )
drag_margin_left = 0.01
drag_margin_top = 0.01
drag_margin_right = 0.01
drag_margin_bottom = 0.01

[node name="mana_recover" type="Timer" parent="."]
wait_time = 0.5

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2( -8.74228e-008, 12 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.0714493, 12.1932 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
color = Color( 0.691406, 0.417106, 0.151245, 1 )
energy = 1.3
shadow_enabled = true

[node name="cell_vs_magnitude" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="animation_finished" from="mage" to="." method="_on_mage_animation_finished"]
[connection signal="timeout" from="mana_recover" to="." method="_on_mana_recover_timeout"]
[connection signal="timeout" from="cell_vs_magnitude" to="." method="_on_cell_vs_magnitude_timeout"]
